Fix overflow

--- a/assets/stylesheets/less/style.less
+++ b/assets/stylesheets/less/style.less
@@ -25,7 +25,6 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
-  width: 100%;
 }
 body {
   color: @bodyColor;
@@ -68,6 +67,7 @@ strong {
   height: 100%;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
   width: 100%;
+  .clearfix();
   .container {
     height: 100%;
   }
